--- a/animal.html
+++ b/animal.html
@@ -73,14 +73,65 @@
   </div>
  
  <div class="container">
-  <img src="image2.jpg" class="img-thumbnail img-fluid" alt="image2" width="350px">
-  <img src="image1.jpg" class="img-thumbnail img-fluid" alt="image1" width="350px">
-  <img src="image3.png" class="img-thumbnail img-fluid" alt="image3" width="350px">
+  <img src="image2.jpg" class="img-thumbnail img-fluid" alt="image2" width="350px"  height="500">
+  <img src="image1.jpg" class="img-thumbnail img-fluid" alt="image1" width="350px"  height="500">
+  <img src="image3.png" class="img-thumbnail img-fluid" alt="image3" width="350px"  height="500">
 </div>
 <div class="container">
-  <img src="image4.png" class="img-thumbnail img-fluid" alt="image2" width="350px">
-  <img src="image5.png" class="img-thumbnail img-fluid" alt="image1" width="350px">
-  <img src="image6.jpg" class="img-thumbnail img-fluid" alt="image3" width="350px">
+  <img src="image4.png" class="img-thumbnail img-fluid" alt="image2" width="350px"  height="500">
+  <img src="image5.png" class="img-thumbnail img-fluid" alt="image1" width="350px"  height="500">
+  <img src="image6.jpg" class="img-thumbnail img-fluid" alt="image3" width="350px"  height="500">
 </div>  
+<br>
+<table class ="table table-striped table-bordered table-hover table-sm">
+    <caption>The following table shows the Animals, Cities and Cars</caption>
+   <thead style="background-color: blue;text-align: center ;">
+    <tr class="bg text-red">
+      <th scope="col">Letter</th>
+      <th scope="col">Animal</th>
+      <th scope="col">City</th>
+      <th scope="col">Car</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr class=" bg-info text-pink">
+      <th scope ="row">K</th>
+      <td>Kangaroo</td>
+      <td>Kolkata</td>
+      <td>KIA</td>
+    </tr>
+    <tr>
+      <th scope ="row">i</th>
+      <td>ibis</td>
+      <td>Iowa</td>
+      <td>i10</td>
+    </tr>
+    <tr class="bg-success text-pink">
+      <th scope ="row">k</th>
+      <td>kakapo</td>
+      <td>karnataka</td>
+      <td>kepler</td>
+    </tr>
+      <tr>
+        <th scope="row">k</th>
+        <td>kite</td>
+        <td>kingston</td>
+        <td>kaweski</td>
+    </tr>
+    <tr class="bg-warning text-red">
+      <th scope="row">u</td>
+      <td>uakari</td>
+      <td>uravakonda</td>
+      <td>ultima</td>
+    </tr>
+    <tr>
+      <th scope="row">r</td>
+      <td>rabit</td>
+      <td>rangareddy</td>
+      <td>ritz</td>
+    </tr>
+  </tbody>
+  </table>
+  <br>
 </body>
 </html>
