--- a/animal.html
+++ b/animal.html
@@ -133,5 +133,20 @@
   </tbody>
   </table>
   <br>
+  <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+    <div class="btn-group me-2 btn-group-lg" role="group" aria-label="First group">
+      <button type="button" class="btn btn-success">k</button>
+      <button type="button" class="btn btn-success">i</button>
+      <button type="button" class="btn btn-success">K</button>
+    </div>
+    <div class="btn-group me-2 btn-group-lg" role="group" aria-label="Second group">
+      <button type="button" class="btn btn-warning">k</button>
+      <button type="button" class="btn btn-warning">u</button>
+    </div>
+    <div class="btn-group btn-group-lg" role="group" aria-label="Third group">
+      <button type="button" class="btn btn-danger">r</button>
+    </div>
+  </div>
+  <br><br>
 </body>
 </html>
